Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Nov-2010 Christophe Demko
 # Removing an extra div + some formatting while testing [#23068]
 # [#23206] Improving permissions rules output (Dennis Hermacki)

10-Nov-2010 Jean-Marie Simonet
 $ Updating admin lang xmls
 # [#23195] Prevent defacement of sites by specifying ?tmpl=offline. Thanks Rouven.
 # [#23161] Improve the markup of the Pagenavigation plugin. Thanks Rouven.
 $ [#23198] Remove unnecessary keys in X.plg_system_p3p.sys.ini. Thanks Rouven.
 $ Applying JText::alt to JALL_LANGUAGE see [#23132]

10-Nov-2010 Andrew Eddie
 # Fixed issue [#23175] modal dialog not displaying drop shadows on all sides (Al Kent).
 # Fixed issue [#23168] Category Blog view: Articles get edit permission from the category with its same id number (Juan Felix Mateos, Elin Waring).

09-Nov-2010 Christophe Demko
 # [#23170] Itemid is lost when browsing from content which is not linked to a menu item
 # [#22298] Renaming JUser method (Dennis Hermacki)
 # [#22488] set_magic_quotes_runtime() is deprecated as of PHP 5.3.0
 # [#23163] Remove closing tags for empty elements (Rouven Weßling)
 # [#23162] Remove the last occurrence of the <font> element (Rouven Weßling)

09-Nov-2010 Jean-Marie Simonet
 # [#23177] Ability to set a default template style per language when System - Language Filter plugin is on. Thanks Christophe.
 # [#23132] Some language have issues when translating global strings such as JALL. Thanks Christophe.
 # [#22839] author link redirects to login form and not to profile of author. Thanks Elin and Bill.
 $ [#23149] COM_USERS_ACTIVATION_TOKEN_NOT_FOUND message has no translation. Thanks Ronald
  
09-Nov-2010 Mark Dexter
# [#23054] Follow up on Issue 22932 - Alternate Layouts for Components
# Fix PHP notice problem with [#23054] 

08-Nov-2010 Ian MacLennan