@@ -744,6 +744,7 @@
 			name="rules"
 			type="rules"
 			label="COM_CONFIG_FIELD_RULES_LABEL"
+			validate="rules"
 			class="inputbox"
 			filter="rules">
 			<action
