@@ -664,6 +664,7 @@
 			type="rules"
 			label="JCONFIG_PERMISSIONS_LABEL"
 			class="inputbox"
+			validate="rules"
 			filter="rules"
 			component="com_content"
 			section="component" />
