@@ -112,6 +112,7 @@
 			type="rules"
 			label="JCONFIG_PERMISSIONS_LABEL"
 			filter="rules"
+			validate="rules"
 			component="com_media"
 			section="component">
 			<action
