@@ -11,6 +11,7 @@
 			type="rules"
 			label="JCONFIG_PERMISSIONS_LABEL"
 			filter="rules"
+			validate="rules"
 			component="com_messages"
 			section="component">
 			<action
