@@ -274,6 +274,7 @@
 			type="rules"
 			label="JCONFIG_PERMISSIONS_LABEL"
 			filter="rules"
+			validate="rules"
 			component="com_newsfeeds"
 			section="component"/>
 	</fieldset>
