@@ -10,6 +10,7 @@
 			type="rules"
 			label="JCONFIG_PERMISSIONS_LABEL"
 			filter="rules"
+			validate="rules"
 			component="com_redirect"
 			section="component">
 			<action
