@@ -266,6 +266,7 @@
 		<field name="rules" type="rules"
 			component="com_weblinks"
 			filter="rules"
+			validate="rules"
 			label="JCONFIG_PERMISSIONS_LABEL"
 			section="component" />
 	</fieldset>
